# SimplePatchLoader

./: .gitignore  CMakeLists.txt  README.md  about.md  logo.xcf  mod.json
mh/: absolllute.megahack.lib  extensions2.hpp
resources/shaders/: pp-frag.glsl  pp-vert.glsl
src/: dirs.cpp  dirs.hpp  main.cpp  mh.cpp  mh.hpp  mh_stub.cpp  patches.cpp  patches.hpp  pp.cpp  pp.hpp  sigscan.cpp  sigscan.hpp  util.cpp  util.hpp
